--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Title B</title>
 </head>
 <body>
+    <p>我是B成員</p>
+    <p>B 成員在 main 分支進度上，開一個 feature/editTitleB 的分支 ，在index.html 的 title 調整為 修改 Title B， 將feature/editTitleB分支進行 git push，並發 PR 合併到 main，並指派 A 成員 review</p>
 </body>
 </html>
